syntax = "proto3";

enum PageRefStatus {
  PENDING   = 0;
  EXECUTING = 1;
  FINISHED  = 2;
  FAILED    = 3;
}
